--- a/creativity.html
+++ b/creativity.html
@@ -81,25 +81,9 @@
                 </a>
               </li>
 
-              <li class="nav-item item-not-log">
-                <a class="nav-link" href="register.html">
-                  <i class="bi bi-journal-plus"></i> Cadastrar
-                </a>
-              </li>
-              <li class="nav-item item-not-log">
-                <a class="nav-link" href="login.html">
-                  <i class="bi bi-key-fill"></i> Logar
-                </a>
-              </li>
-
-              <li class="nav-item item-log">
+              <li class="nav-item">
                 <a class="nav-link" href="myCrafts.html">
-                  <i class="bi bi-images"></i> Meus Crafts
-                </a>
-              </li>
-              <li class="nav-item item-log">
-                <a class="nav-link" onclick="logout()">
-                  <i class="bi bi-door-open-fill"></i> Sair
+                  <i class="bi bi-images"></i> Crafts Salvos
                 </a>
               </li>
             </ul>
