--- a/myCrafts.html
+++ b/myCrafts.html
@@ -20,7 +20,7 @@
 
     <meta name="theme-color" content="#febc2f" />
     
-    <title>Craft Maker: Crafts</title>
+    <title>Craft Maker: Crafts Salvos</title>
     <link rel="icon" href="assets/img/favicon.svg" />
     <link rel="icon" type="image/x-icon" sizes="16x16" href="assets/img/favicon.svg">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/ico-craft.png">
@@ -81,25 +81,9 @@
                 </a>
               </li>
 
-              <li class="nav-item item-not-log">
-                <a class="nav-link" href="register.html">
-                  <i class="bi bi-journal-plus"></i> Cadastrar
-                </a>
-              </li>
-              <li class="nav-item item-not-log">
-                <a class="nav-link" href="login.html">
-                  <i class="bi bi-key-fill"></i> Logar
-                </a>
-              </li>
-
-              <li class="nav-item item-log">
+              <li class="nav-item">
                 <a class="nav-link" href="myCrafts.html">
-                  <i class="bi bi-images"></i> Meus Crafts
-                </a>
-              </li>
-              <li class="nav-item item-log">
-                <a class="nav-link" onclick="logout()">
-                  <i class="bi bi-door-open-fill"></i> Sair
+                  <i class="bi bi-images"></i> Crafts Salvos
                 </a>
               </li>
             </ul>
@@ -114,8 +98,8 @@
         </div>
       </nav>
         <section class="text-center">
-            <h1>Crafts de <span id="name-user"></span></h1>
-            <div id="myCraft" class="row d-flex justify-content-center"></div>
+            <h1> Crafts Salvos</h1>
+            <div id="myCraft" class="row d-flex justify-content-center"><span id="load">Carregando...</span></div>
         </section>
     </div>
 
